# initial-game

./: LICENSE  README.md  main.py  pyproject.toml
src/: colors.py  player.py  settings.py
src/assets/: README.md
src/components/algorithm/: __init__.py  breadth_first_search.py
src/components/system/: __init__.py  attack_system.py  debug_system.py  move_system.py
src/scenes/: __init__.py  playground.py  scene.py  ui.py  welcome.py  welcome_theme.json
