[tool.poetry]
name = "initial-game"
version = "0.1.0"
description = "An initial, or a scaffold project"
authors = ["wenke.lai <wenke.studio@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
